# docker-win-testapp

./: CMakeLists.txt  README.md  main.cpp
docker-test-library/: CMakeLists.txt  docker-test-library.cpp  docker-test-library.h
